<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/less_black">

    <EditText
        android:id="@+id/editText"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_search_view"
        android:hint="@string/inicio"
        android:paddingLeft="45dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:textColor="@color/cyan"
        android:textColorHint="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="267dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_search_view"
        android:hint="@string/contra"
        android:paddingLeft="45dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:textColor="@color/cyan"
        android:textColorHint="@color/cyan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="97dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/bigmapa" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cyan"
        android:text="@string/acept"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708"
        app:strokeColor="@color/cyan"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>